--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,6 +18,7 @@
     "@aksar/tailwind-config": "^0.1.0",
     "@aksar/ui": "^0.1.0",
     "@clerk/nextjs": "^4.17.3",
+    "@next/mdx": "13.4.2-canary.5",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.26.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@aksar/eslint-config": "^0.1.0",
+    "@types/mdx": "^2.0.5",
     "@types/node": "^18.16.8",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
